@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add 'skip' option for finish()
+
 0.000008  2016-03-10 16:53:55-08:00 America/Los_Angeles
 
     - Add 'silent', 'no_plan' and 'collapse' options for finish()
